Hid overflow to fix extra right direction bug

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,6 @@
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
-
 
 h1 {
   text-shadow: 2px 2px 1px rgba(255, 255, 255, 0.2);
